# SimpleGameOnRust

./: Cargo.toml
src/: main.rs
src/core/: collision_system.rs  components.rs  mod.rs  motion_system.rs  render_system.rs  spawn_systems.rs
