[package]
name = "shaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
hecs = "*"
macroquad = "*"

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi" ]
target_sdk_version = 23
